# reportage

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  TBD.md  enozunu.kdl  install.sh  reportage.examples.kdl  reportage.fixtures.invalid.kdl  reportage.fixtures.valid.kdl  reportage.kdl  rust-toolchain.toml
crates/reportage-cli/: Cargo.toml
crates/reportage-cli/src/: docs.rs  lib.rs  main.rs  references.rs
crates/reportage-cli/src/render/: human.rs  json.rs  mod.rs
crates/reportage-cli/tests/: docs_generation.rs  docs_index.rs  integration_test.rs  json_report_fixtures.rs  references_index.rs  run_result_fixtures.rs  self_test.rs
crates/reportage-cli/tests/support/: mod.rs
crates/reportage-core/: Cargo.toml
crates/reportage-core/src/: artifact.rs  config.rs  contents_diagnostic.rs  diagnostic.rs  docs.rs  evaluator.rs  executor.rs  fixture.rs  lib.rs  model.rs  parser.rs  reportage.pest  result.rs  run_result.rs  semantic.rs  semantic_rule_registry.rs  shell_quote.rs  shim.rs  shim_event.rs  shim_scaffold.rs  source.rs  suite.rs  workspace.rs
crates/reportage-core/src/docs/: catalog.rs  discovery.rs  layout.rs  loader.rs  markdown.rs  output.rs  plain.rs  render.rs
crates/reportage-core/src/evaluator/: execution.rs  expectation.rs  mod.rs  observation.rs
crates/reportage-core/src/parser/: document.rs  error.rs  expectation.rs  heredoc.rs  literal.rs  mod.rs  step.rs
crates/reportage-core/tests/: grammar_fixtures.rs  semantic_rule_coverage.rs  semantic_specs.rs  source_model.rs  syntax_conformance.rs
(+697 files in other folders)
