[package]
name = "reportage-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reportage"
path = "src/main.rs"

[dependencies]
reportage-core = { path = "../reportage-core" }
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.2.2"
assert_fs = "1.1.4"
predicates = "3.1.4"
