[package]
name = "reportage-cli"

edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "reportage"
path = "src/main.rs"

[dependencies]
reportage-core = { path = "../reportage-core" }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "=2.2.2"
assert_fs = "=1.1.4"
predicates = "=3.1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.150"
glob = "0.3"
