[package]
name = "reportage-core"

edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kdl = "6"
glob = "0.3"
tempfile = "3"
pest = "2"
pest_derive = "2"
base64 = "0.22"
